--- a/roborio/Makefile
+++ b/roborio/Makefile
@@ -1,7 +1,7 @@
 AT = @
 INCDIR = -I$(HOME)/wpilib/cpp/current/include -I$(HOME)/wpilib/user/cpp/include
 CPPFLAGS += -g -Wall -W $(INCDIR) -std=c++14 -fPIC 
-LFLAGS = -L$(HOME)/wpilib/cpp/current/lib -L$(HOME)/wpilib/user/cpp/lib -lCTRLib -lwpi
+LFLAGS = -L$(HOME)/wpilib/cpp/current/reflib/linux/athena/shared -L$(HOME)/wpilib/common/current/lib/linux/athena/shared -L$(HOME)/wpilib/user/cpp/lib -lwpi
 CXX = arm-frc-linux-gnueabi-g++
 TEAM = 5572
 RMCOMMAND = rm -f
@@ -11,8 +11,6 @@ SOURCES = ${shell find src -name '*.cpp'}
 HEADERS = ${shell find src -name '*.hpp'}
 OBJECTS = $(patsubst src/%.cpp,bin/%.o,$(SOURCES))
 
-
-
 all: dirs $(OBJECTS)
 	test -d bin/ || mkdir -p bin/
 	$(CXX) $(CPPFLAGS) $(OBJECTS) $(LFLAGS) -o FRCUserProgram
@@ -20,7 +18,6 @@ all: dirs $(OBJECTS)
 
 dirs : 
 	mkdir -p ${subst src,bin,${shell find src -type d}}
-	
 
 bin/%.o : src/%.cpp
 	$(CXX) -c -o $@ $< $(CPPFLAGS)
